<resources>
    <string name="app_name">ScanLib</string>
    <string name="home_title">Accueil</string>
    <string name="add_book_desc_button">Ajouter un livre</string>
    <string name="hint_search_bar_text">Rechercher dans la bibliothèque...</string>
    <string name="genre_button_text">Genre</string>
    <string name="filter_text_button">Filtre</string>
    <string name="group_text_button">Tous</string>
    <string name="content_desc_book_cover">Image de la couverture d\'un livre scanné</string>
    <string name="book_title_text">Titre du livre</string>
    <string name="capture_photo">Bouton qui permet de prendre une photo</string>
    <string name="scan_title">Scan</string>
    <string name="thumbnail_text_desc">Prévisualisation du traitement sur l\'image capturée</string>
    <string name="details_title">Détails</string>
    <string name="book_title">%s</string>
    <string name="synopsis_title">Synopsis :</string>
    <string name="synpsosis_text">%s</string>
    <string name="author_name_text">%s %s</string>
    <string name="date_publisher_text">Date de publication : </string>
    <string name="genre_text">Genre : </string>
    <string name="editor_name_text">Éditeur : </string>
    <string name="isbn_code">ISBN : </string>
    <string name="pages_number_text">Pages : </string>
    <string name="edit_button_text_desc">Modifier les informations du livre</string>
    <string name="return_button_text_desc">Permet de revenir à la page précédente</string>
    <string name="erase_edit_button_text">Annuler les modifications</string>
    <string name="valid_button_text">Accepte les modifications</string>
    <string name="book_genre_edit_text">%s</string>
    <string name="checkbox_desc_content">Checkbox de sélection</string>
    <string name="supress_book_text">Supprimer la sélection</string>
    <string name="resultat_livres">Liste des livres trouvés</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="save_button_text">Enregistrer</string>
    <string name="galerie_button_text">Importer depuis la galerie</string>
    <string name="manual_button_text">Ajouter manuellement</string>
    <string name="scan_button_text">Scanner la tranche</string>
    <string name="filters_label">Filtres actifs : </string>
    <string name="filter_genre">Genre = %1$s</string>
    <string name="filter_year">Année = %1$s</string>
    <string name="filter_score_min">Score ≥ %1$.1f</string>
    <string name="filter_score_unknown">Score = Inconnu</string>
    <string name="no_filters">Aucun filtre actif</string>
    <string name="reset_filters">Réinitialiser les filtres</string>
    <string name="book_cover">Couverture du livre</string>
    <string name="filtrer_par_ann_e">Filtrer par année</string>
    <string name="filtrer_par_score">Filtrer par score</string>
    <string name="filtrer_par_score_popup">Filtrer par score</string>
    <string name="filtrer_par_ann_e_popup">Filtrer par année</string>
    <string name="derniers_abouts_popup">Derniers ajouts</string>
    <string name="ajouter_aux_groupes">Ajouter à un groupe</string>
    <string name="nom_du_groupe">Nom du groupe</string>
    <string name="edit_group">Edit group</string>
    <string name="delete_group">Delete group</string>
    <string name="create_groupe">Créer un groupe</string>
    <string name="les_groupes">Gérer les groupes</string>
    <string name="image_arrow_desc">Flèche de l\'image originale vers l\'image avec boîtes</string>
    <string name="treatments_title">Traitements</string>
    <string name="image_original_text">Image Originale</string>
    <string name="image_original_desc">Texte qui spécifie l\'image originale</string>
    <string name="image_with_boxes_text">Image Avec Boîtes</string>
    <string name="images_with_boxes_desc">Texte qui spécifie l\'image avec boîtes</string>
    <string name="imageview_original">Image originale</string>
    <string name="imageview_with_boxes">Image annotée</string>
    <string name="ajouter_un_groupe">Ajouter à un groupe</string>
    <string name="resultat_ocr">Résultats OCR...</string>
    <string name="voir_les_livres">Voir les livres</string>
    <string name="nb_livres_dectes">Nombre de livres détectés :</string>
</resources>
