<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background">

    <!-- Bandeau en haut -->
    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/secondary_background"
        android:gravity="center"
        android:text="@string/details_title"
        android:textColor="@color/secondary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Bouton de retour arrière -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/eraseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/erase_edit_button_text"
        app:backgroundTint="@color/primary_button"
        app:layout_constraintStart_toStartOf="@id/headerTitle"
        app:layout_constraintTop_toBottomOf="@id/headerTitle"
        app:srcCompat="@drawable/outline_close_24"
        app:tint="@color/secondary_text" />

    <!-- Bouton de modification -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/validButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/valid_button_text"
        app:backgroundTint="@color/primary_button"
        app:layout_constraintTop_toBottomOf="@id/headerTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/outline_check_24"
        app:tint="@color/secondary_text"/>


    <!-- Titre du livre -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textSize="25sp"
        android:textColor="@color/secondary_background"
        app:layout_constraintStart_toEndOf="@id/eraseButton"
        app:layout_constraintEnd_toStartOf="@id/validButton"
        app:layout_constraintTop_toTopOf="@id/validButton"
        app:layout_constraintBottom_toBottomOf="@id/validButton"/>

    <!-- Preview de la couverture du livre -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPreviewContainer"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="@id/eraseButton"
        app:layout_constraintTop_toBottomOf="@id/eraseButton"
        app:layout_constraintBottom_toTopOf="@id/separator">
    </com.google.android.material.card.MaterialCardView>

    <!-- Nom de l'auteur -->
    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name_text"
        android:textColor="@color/secondary_background"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/cardPreviewContainer"
        app:layout_constraintTop_toTopOf="@id/cardPreviewContainer"
        app:layout_constraintBottom_toTopOf="@id/book_genre"/>

    <!-- Genre du livre -->
    <TextView
        android:id="@+id/book_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_text"
        android:textColor="@color/secondary_background"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/cardPreviewContainer"
        app:layout_constraintTop_toBottomOf="@id/author_name"
        app:layout_constraintBottom_toTopOf="@id/date_publisher"/>

    <!-- Date de parution -->
    <TextView
        android:id="@+id/date_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_publisher_text"
        android:textColor="@color/secondary_background"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/cardPreviewContainer"
        app:layout_constraintTop_toBottomOf="@id/book_genre"
        app:layout_constraintBottom_toTopOf="@id/editor"/>

    <!-- Éditeur -->
    <TextView
        android:id="@+id/editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editor_name_text"
        android:textColor="@color/secondary_background"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/cardPreviewContainer"
        app:layout_constraintTop_toBottomOf="@id/date_publisher"
        app:layout_constraintBottom_toTopOf="@id/pages_number"/>

    <!-- Nombre de pages -->
    <TextView
        android:id="@+id/pages_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pages_number_text"
        android:textColor="@color/secondary_background"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/cardPreviewContainer"
        app:layout_constraintTop_toBottomOf="@id/editor"
        app:layout_constraintBottom_toTopOf="@id/isbn"/>

    <!-- ISBN -->
    <TextView
        android:id="@+id/isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isbn_code"
        android:textColor="@color/secondary_background"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/cardPreviewContainer"
        app:layout_constraintTop_toBottomOf="@id/pages_number"
        app:layout_constraintBottom_toBottomOf="@id/cardPreviewContainer"/>

    <!-- Ligne séparatrice -->
    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_margin="16dp"
        android:background="@color/secondary_background"
        app:layout_constraintTop_toBottomOf="@id/cardPreviewContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Titre synopsis -->
    <TextView
        android:id="@+id/synopsis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synopsis_title"
        android:layout_marginTop="16dp"
        android:textColor="@color/secondary_background"
        app:layout_constraintStart_toStartOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@id/separator"/>

    <!-- Corps du synopsis -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synpsosis_text"
        android:layout_marginTop="16dp"
        android:textColor="@color/secondary_background"
        app:layout_constraintStart_toStartOf="@id/synopsis_title"
        app:layout_constraintTop_toBottomOf="@id/synopsis_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>
