<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bottom_sheet_top_rounded">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book_desc_button"
        android:textColor="@color/secondary_background"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textAlignment="center"
        android:paddingBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/option_scan"
        style="@style/Widget.Material3.Button.TextButton"
        android:textColor="@color/secondary_text"
        android:backgroundTint="@color/primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_button_text"
        android:layout_marginBottom="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/option_manual"
        style="@style/Widget.Material3.Button.TextButton"
        android:textColor="@color/secondary_text"
        android:backgroundTint="@color/primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_button_text"
        android:layout_marginBottom="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/option_import"
        style="@style/Widget.Material3.Button.TextButton"
        android:textColor="@color/secondary_text"
        android:backgroundTint="@color/primary_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/galerie_button_text"/>
</LinearLayout>
