<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <!-- Image de couverture du livre -->
    <ImageView
        android:id="@+id/bookCoverImage"
        android:layout_width="85dp"
        android:layout_height="125dp"
        android:contentDescription="@string/content_desc_book_cover"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:background="@drawable/border_book_cover"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bookTitle" />

    <!-- Titre du livre -->
    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title_text"
        android:textAlignment="center"
        android:textColor="@color/secondary_background"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/bookCoverImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Checkbox de sélection -->
    <ImageView
        android:id="@+id/selectionIndicator"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/checkbox_desc_content"
        android:src="@drawable/ic_checkbox_unchecked"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/bookCoverImage"
        app:layout_constraintEnd_toEndOf="@id/bookCoverImage"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:elevation="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
